--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="tr">
 
 <head>
-  <meta http-equiv="refresh" content="10">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,8 @@
 
 <body>
   <script>
-    var x = new XMLHttpRequest();
+    setInterval(() => {
+      var x = new XMLHttpRequest();
     x.open("GET", "https://ww1.kodlamakampi.com/durum.xml", true);
     x.onreadystatechange = function () {
       if (x.readyState == 4 && x.status == 200) {
@@ -25,6 +25,8 @@
       }
     };
     x.send(null);
+    }, 10000);
+ 
   </script>
   <div class="container">
     <div class="row">
