--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG
 <div class="row">
 <div class="col-md-3"></div>
 <div class="col-md-6">
-<img src="kodlama-kampi.svg">
 <script>
+document.write('<img src="kodlama-kampi.svg">');
 document.write('<p class="container">Kodlama Kampı\'nın Ana Sunucusu Çevrimdışı</p>');
 document.write('<p class="container">Bunun sebebi Kodlama kampı ekibinin sunucuyu devre dışı bırakması veya sunucunun ip adresini güncellememesi olabilir.</p>');
 </script>
