--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@ integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG
 <div class="col-md-6">
 <script>
 document.write('<img src="kodlama-kampi.svg">');
-document.write('<p class="container">Kodlama Kampı\'nın Ana Sunucusu Çevrimdışı</p>');
-document.write('<p class="container">Bunun sebebi Kodlama kampı ekibinin sunucuyu devre dışı bırakması veya sunucunun ip adresini güncellememesi olabilir.</p>');
+document.write('<p class="container"><b>Kodlama Kampı\'nın Ana Sunucusu Çevrimdışı</b></p>');
+document.write('<p class="container">Bunun sebebi Kodlama kampı ekibinin ana sunucuyu devre dışı bırakması veya gün içerisinde değişen ana sunucuya ait ip adresinin kodlama kampı ekibi tarafından güncelleştirilmemesi olabilir.</p>');
+document.write('<p class="container">Bu sayfayı açık bırakabilirsiniz. Böylece ana sunucu aktifleştirildiğinde otomatik olarak bu sayfa kendiliğinden güncellenir.</p>');
+document.write('<p class="container">~Kodlama Kampı Ekibi</p>');
 </script>
 </div>
 </div>
