--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <title>Kodlama Kampı</title>
 <link rel="icon" href="favicon.png">
 <script async src="kodlama-kampi.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
-<body>
-<div class="container">
+<body onload="icerikGostert();">
+<style id="icerikGizle">
+#icerik{visibility:hidden;}
+</style>
+<div class="container" id="icerik">
 <div class="row">
 <div class="col-md-3"></div>
 <div class="col-md-6">
@@ -23,9 +25,16 @@ document.write('<p class="container">Bu sayfayı açık bırakabilirsiniz. Böyl
 document.write('<p class="container">~Kodlama Kampı Ekibi</p>');
 </script>
 </div>
-</div>
-</div>
 <div class="col-md-3"></div>
+</div>
+</div>
+<script>
+function icerikGostert() {
+setTimeout(() => {
+document.getElementById('icerikGizle').remove();
+}, 500);
+}
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
 crossorigin="anonymous"></script>
