--- a/index.html
+++ b/index.html
@@ -1,67 +1,77 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kodlama Kampı</title>
-<link rel="icon" href="favicon.png">
-<script>
-function SunucuDurumu() {
-var siteLinki = "https://ww1.kodlamakampi.com/";
-var xmlLinki = "https://ww1.kodlamakampi.com/durum.xml";
-var x = new XMLHttpRequest();
-x.open("GET", xmlLinki, true);
-x.onreadystatechange = function () {
-    if (x.readyState == 4 && x.status == 200) {
-        var doc = x.responseXML;
-        var hizmet = doc.getElementsByTagName("hizmet")[0].childNodes[0].nodeValue;
-        if (hizmet == "Aktif") {
-            window.location.replace(siteLinki);
-        }
-    }
-};
-x.send(null);
-}
-async function KontrolEt() {
-    await SunucuDurumu();
-}
-KontrolEt();
-setInterval(() => {
-    var x = new XMLHttpRequest();
-    x.open("GET", xmlLinki, true);
-    x.onreadystatechange = function () {
-        if (x.readyState == 4 && x.status == 200) {
-            var doc = x.responseXML;
-            var hizmet = doc.getElementsByTagName("hizmet")[0].childNodes[0].nodeValue;
-            if (hizmet == "Aktif") {
-                window.location.replace(siteLinki);
-            }
-        }
-    };
-    x.send(null);
-}, 10000);
-</script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kodlama Kampı</title>
+    <link rel="icon" href="favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
+
 <body>
-<div class="container">
-<div class="row">
-<div class="col-md-3"></div>
-<div class="col-md-6">
-<script>
-document.write('<img src="kodlama-kampi.svg">');
-document.write('<p class="container"><b>Kodlama Kampı\'nın Ana Sunucusu Çevrimdışı</b></p>');
-document.write('<p class="container">Bunun sebebi Kodlama kampı ekibinin ana sunucuyu devre dışı bırakması veya gün içerisinde değişen ana sunucuya ait ip adresinin kodlama kampı ekibi tarafından güncelleştirilmemesi olabilir.</p>');
-document.write('<p class="container">Bu sayfayı açık bırakabilirsiniz. Böylece ana sunucu aktifleştirildiğinde otomatik olarak bu sayfa kendiliğinden güncellenir.</p>');
-document.write('<p class="container">~Kodlama Kampı Ekibi</p>');
-</script>
-</div>
-<div class="col-md-3"></div>
-</div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-crossorigin="anonymous"></script>
+    <script>
+        var siteLinki = "https://ww1.kodlamakampi.com/";
+        var xmlLinki = "https://ww1.kodlamakampi.com/durum.xml";
+        var x = new XMLHttpRequest();
+        x.open("GET", xmlLinki, true);
+        x.onreadystatechange = function () {
+            if (x.readyState == 4 && x.status == 200) {
+                var doc = x.responseXML;
+                var hizmet = doc.getElementsByTagName("hizmet")[0].childNodes[0].nodeValue;
+                if (hizmet == "Aktif") {
+                    window.location.replace(siteLinki);
+                }
+                else {
+                    document.getElementById("bilgilendirmeCss").innerHTML = "visibility: visible;";
+                }
+            }
+            else {
+                document.getElementById("bilgilendirmeCss").innerHTML = "visibility: visible;";
+            }
+        };
+        x.send(null);
+        setInterval(() => {
+            var x = new XMLHttpRequest();
+            x.open("GET", xmlLinki, true);
+            x.onreadystatechange = function () {
+                if (x.readyState == 4 && x.status == 200) {
+                    var doc = x.responseXML;
+                    var hizmet = doc.getElementsByTagName("hizmet")[0].childNodes[0].nodeValue;
+                    if (hizmet == "Aktif") {
+                        window.location.replace(siteLinki);
+                    }
+                }
+            };
+            x.send(null);
+        }, 10000);
+    </script>
+    <style id="bilgilendirmeCss">
+        #bilgilendirme {
+            visibility: hidden;
+        }
+    </style>
+    <div class="container" id="bilgilendirme">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <img src="kodlama-kampi.svg">
+                <p class="container"><b>Kodlama Kampı'nın Ana Sunucusu Çevrimdışı</b></p>
+                <p class="container">Bunun sebebi Kodlama kampı ekibinin ana sunucuyu devre dışı bırakması veya gün
+                    içerisinde değişen ana sunucuya ait ip adresinin kodlama kampı ekibi tarafından güncelleştirilmemesi
+                    olabilir.</p>
+                <p class="container">Bu sayfayı açık bırakabilirsiniz. Böylece ana sunucu aktifleştirildiğinde otomatik
+                    olarak bu sayfa kendiliğinden güncellenir.</p>
+                <p class="container">~Kodlama Kampı Ekibi</p>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
