--- a/index.html
+++ b/index.html
@@ -12,62 +12,6 @@
 </head>
 
 <body>
-    <script>
-        function sunucuHizmetVermiyor() {
-            setTimeout(() => {
-                document.getElementById("zaman").innerText = "4";
-            }, 1000);
-            setTimeout(() => {
-                document.getElementById("zaman").innerText = "3";
-            }, 2000);
-            setTimeout(() => {
-                document.getElementById("zaman").innerText = "2";
-            }, 3000);
-            setTimeout(() => {
-                document.getElementById("zaman").innerText = "1";
-            }, 4000);
-            setTimeout(() => {
-                document.getElementById("zaman").remove();
-                document.getElementById("sunucuKontroluBilgiMetni").remove();
-                document.getElementById("bilgilendirmeCss").innerHTML = "visibility: visible;";
-            }, 5000);
-        }
-
-        var siteLinki = "https://ww1.kodlamakampi.com/";
-        var xmlLinki = "https://ww1.kodlamakampi.com/durum2.xml";
-        var x = new XMLHttpRequest();
-        x.open("GET", xmlLinki, true);
-        x.onreadystatechange = function () {
-            if (x.readyState == 4 && x.status == 200) {
-                var doc = x.responseXML;
-                var hizmet = doc.getElementsByTagName("hizmet")[0].childNodes[0].nodeValue;
-                if (hizmet == "Aktif") {
-                    window.location.replace(siteLinki);
-                }
-                else {
-                    sunucuHizmetVermiyor();
-                }
-            }
-            else {
-                sunucuHizmetVermiyor();
-            }
-        };
-        x.send(null);
-        setInterval(() => {
-            var x = new XMLHttpRequest();
-            x.open("GET", xmlLinki, true);
-            x.onreadystatechange = function () {
-                if (x.readyState == 4 && x.status == 200) {
-                    var doc = x.responseXML;
-                    var hizmet = doc.getElementsByTagName("hizmet")[0].childNodes[0].nodeValue;
-                    if (hizmet == "Aktif") {
-                        window.location.replace(siteLinki);
-                    }
-                }
-            };
-            x.send(null);
-        }, 10000);
-    </script>
     <style id="bilgilendirmeCss">
         #bilgilendirme {
             visibility: hidden;
@@ -97,6 +41,61 @@
             <div class="col-md-3"></div>
         </div>
     </div>
+    <script>
+        function SunucuKontrolSayaci() {
+            setTimeout(() => {
+                document.getElementById("zaman").innerText = "4";
+            }, 1000);
+            setTimeout(() => {
+                document.getElementById("zaman").innerText = "3";
+            }, 2000);
+            setTimeout(() => {
+                document.getElementById("zaman").innerText = "2";
+            }, 3000);
+            setTimeout(() => {
+                document.getElementById("zaman").innerText = "1";
+            }, 4000);
+            setTimeout(() => {
+                document.getElementById("zaman").remove();
+                document.getElementById("sunucuKontroluBilgiMetni").remove();
+                document.getElementById("bilgilendirmeCss").innerHTML = "visibility: visible;";
+            }, 5000);
+        }
+        var sayacAktiflestirildiMi = false;
+        SunucuKontrolSayaci();
+        function sunucuyuKontrolEt(sayacAktifmi) {
+            var siteLinki = "https://ww1.kodlamakampi.com/";
+            var xmlLinki = "https://ww1.kodlamakampi.com/durum.xml";
+            var x = new XMLHttpRequest();
+            x.open("GET", xmlLinki, true);
+            x.onreadystatechange = function () {
+                if (x.readyState == 4 && x.status == 200) {
+                    var doc = x.responseXML;
+                    var hizmet = doc.getElementsByTagName("hizmet")[0].childNodes[0].nodeValue;
+                    if (hizmet == "Aktif") {
+                        window.location.replace(siteLinki);
+                    }
+                    else if (sayacAktifmi) {
+                        if (sayacAktiflestirildiMi == false) {
+                            SunucuKontrolSayaci();
+                        }
+                        sayacAktiflestirildiMi = true;
+                    }
+                }
+                else if (sayacAktifmi) {
+                    if (sayacAktiflestirildiMi == false) {
+                        SunucuKontrolSayaci();
+                    }
+                    sayacAktiflestirildiMi = true;
+                }
+            };
+            x.send(null);
+        }
+        sunucuyuKontrolEt(true);
+        setInterval(() => {
+            sunucuyuKontrolEt(false);
+        }, 10000);
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
