--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <script>
+        if (window.location.host != "www.kodlamakampi.com") {
+            window.location.replace("https://www.kodlamakampi.com");
+        }
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kodlama Kampı</title>
