--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         sunucuyuKontrolEt();
         SunucuKontrolSayaci();
         function sunucuyuKontrolEt() {
-            var siteLinki = "https://ww1.kodlamakampi.com/";
-            var xmlLinki = "https://ww1.kodlamakampi.com/durum.xml";
+            var siteLinki = "https://www.kodlamakampi.com/";
+            var xmlLinki = "https://www.kodlamakampi.com/durum.xml";
             var x = new XMLHttpRequest();
             x.open("GET", xmlLinki, true);
             x.onreadystatechange = function () {
