--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script>
 		console.log(window.location.href)
 		if(window.location.href == "http://kodlamakampi.com" || window.location.href == "http://kodlamakampi.com/index.html") {
-			window.location.href = "https://kodlamakampi.com";
+			window.location.href = "https://kodlamakampi.com/index.html";
 		}
 	</script>
 	<meta charset="UTF-8">
