--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 
 <body>
     <script>
-            window.location.replace("https://kodlamakampi.com");
+            window.location.replace("https://kodlamakampi.com/index.html");
     </script>
 </body>
 
