--- a/404.html
+++ b/404.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+    404
     <script>
-            window.location.replace("https://kodlamakampi.com/index.html");
+            //window.location.replace("https://kodlamakampi.com/index.html");
     </script>
 </body>
 
