--- a/index.html
+++ b/index.html
@@ -363,8 +363,7 @@
 																<h6 class="title">Bizimle WhatsApp üzerinden
 																	<br>iletişim kurun
 																</h6>
-																<p class="text"><a target="_blank" href="https://api.whatsapp.com/send?phone=905070840430">(507) 084
-																		0430</a></p>
+																<p class="text"><a target="_blank" href="https://api.whatsapp.com/send?phone=905307800868">(530) 780 0868</a></p>
 															</div>
 														</div>
 													</aside>
@@ -1567,7 +1566,7 @@
 							<div class="heading-default wow fadeInUp">
 								<span class="badge bg-primary ttl">%50 indirim fırsatını kaçırma</span>
 								<h2>Site <span class="text-primary">Paketlerimiz</span></h2>
-								<p>İşinize en uygun site paketlerimizden herhangi birini seçmeden önce bizimle WhatsApp (507 084 0430) üzerinden iletişime geçebilirsiniz. Böylece işinize en uygun paketi seçmenize ve işinizi büyütmenize yardımcı olabiliriz. Yazılım şirketimiz kurulum aşamasında olduğu için geçici olarak satın alma işlemleri banka havalesi ile yapılacaktır. </p>
+								<p>İşinize en uygun site paketlerimizden herhangi birini seçmeden önce bizimle WhatsApp (530 780 0868) üzerinden iletişime geçebilirsiniz. Böylece işinize en uygun paketi seçmenize ve işinizi büyütmenize yardımcı olabiliriz. Yazılım şirketimiz kurulum aşamasında olduğu için geçici olarak satın alma işlemleri banka havalesi ile yapılacaktır. </p>
 							</div>
 						</div>
 					</div>
@@ -1734,9 +1733,9 @@
 								<div class="cta-btn-wrap text-lg-right text-center">
 									<a href="javascript:void(0)" class="btn btn-white" data-text="Join With Us">7/24 İletişim</a>
 
-									<a class="read-link" target="_blank" href="https://api.whatsapp.com/send?phone=905070840430"><span class="cta-call-icon">
+									<a class="read-link" target="_blank" href="https://api.whatsapp.com/send?phone=905307800868"><span class="cta-call-icon">
 										<i class="fa fa-whatsapp"></i>
-									</span> <span class="cta-label">(507) 084 0430</span></a>
+									</span> <span class="cta-label">(530) 780 0868</span></a>
 
 								</div>
 							</div>
@@ -1959,8 +1958,7 @@
 												<h6 class="title">Whatsapp</h6>
 										
 												<p class="text">
-													<a target="_blank" href="https://api.whatsapp.com/send?phone=905070840430">(507) 084
-														0430</a>
+													<a target="_blank" href="https://api.whatsapp.com/send?phone=905307800868">(530) 780 0868</a>
 												</p>
 
 											</div>
@@ -2037,8 +2035,7 @@
 											</div>
 											<div class="contact-info">
 												<p class="text">
-													<a target="_blank" href="https://api.whatsapp.com/send?phone=905070840430">(507) 084
-														0430</a>
+													<a target="_blank" href="https://api.whatsapp.com/send?phone=905307800868">(530) 780 0868</a>
 												</p>
 											</div>
 										</div>
