--- a/index.html
+++ b/index.html
@@ -347,6 +347,12 @@
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17 nav-item">
 												<a title="About" href="#price-section" class="nav-link">Fiyatlarımız</a>
 											</li>
+											<li itemscope="itemscope"
+											itemtype="https://www.schema.org/SiteNavigationElement"
+											id="menu-item-17"
+											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17 nav-item">
+											<a title="About" href="https://dersler.kodlamakampi.com" target="_blank" class="nav-link">Kodlama Derslerimiz</a>
+										</li>
 											</ul>
 										</div>
 										<div class="main-menu-right">
